# aws-lambda-runtime-benchmarks

./: .gitignore  LICENSE  README.md
benchmark-tool/: babel.config.js  package-lock.json  package.json  serverless.yml  tsconfig.json
benchmark-tool/src/: index.ts
java/graalvm/: build.sbt  package.json  serverless.yml
java/graalvm/src/graal/: reflect-config.json
java/graalvm/src/main/java/bootstrap/: LogFactoryImplSubstituted.java  LogFactorySubstitued.java
java/graalvm/src/main/java/com/chatwork/: Main.java  (+1 more)
java/noop/: README.md  build.sbt  serverless.yml
java/sdk/: build.sbt  serverless.yml
java/sdk/project/: plugins.sbt
python/noop/: handler.py  package.json  serverless.yml
python/sdk/: handler.py  package.json  serverless.yml
rust/noop/: Cargo.toml  package.json  serverless.yml
rust/noop/src/: main.rs
rust/sdk/: Cargo.toml  serverless.yml
rust/sdk/src/: main.rs
scala/graalvm/: .scalafmt.conf  build.sbt  package.json  serverless.yml
scala/graalvm/project/: Dependencies.scala  plugins.sbt
scala/graalvm/src/graal/: reflect-config.json
scala/graalvm/src/main/scala/bootstrap/: APIGatewayProxyEventV2.scala  Main.scala  QueryResponse.scala
terraform/: dynamodb.tf  main.tf
terraform/script/dataloader/: datasheet.jsonl  index.js  package.json
test-events/: getItem.json  noop.json  query.json
typescript/noop/: package.json  serverless.yml
typescript/noop/patches/: serverless-esbuild+1.15.1.patch
typescript/noop/src/: index.ts
typescript/sdk/: package.json  serverless.yml
typescript/sdk/src/: index.ts  types.ts
(+4 files in other folders)
