[package]
name = "hello"
version = "0.1.0"
edition = "2018"

[dependencies]
dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.11-alpha", package = "aws-sdk-dynamodb" }
aws_lambda_events = "0.5.0"
lambda_runtime = { version = "0.4.1" }
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
simple_logger = "1.6.0"
log = "^0.4"
